# VibeCoding_GoldenStandard

./: .gitignore  .gitleaks.toml  AGENT_CONSUMPTION.md  AUDIT_TRAIL.md  BACKLOG.md  CERBERUS_CONTRACT.md  CODERCERBERUS_CONCEPTUAL_FRAMEWORK.md  CODERCERBERUS_MARCO_CONCEPTUAL.md  CODE_OF_CONDUCT.md  CONCEPTUAL_FRAMEWORK.md  CONSUMER_CONTRACT.md  CONTRIBUTING.md  DECISIONS.md  GS_Remediation_Plan_2026-06-16.md  GS_SESSION_FINAL_STATUS_2026-07-19.md  HANDOFF.md  INGESTION_PROTOCOL.md  KNOWLEDGE_SOURCES.md  LICENSE  PLAN.md  README.md  SPEC.md  STATE.md  WORKFLOW_RULES.md  cerberus_gs_id_audit.md  depure_principles.py  generate_golden_audit.py  golden_standard.yaml  golden_standard_adversarial_vectors.yaml  golden_standard_audit.json  golden_standard_audit_report.md  golden_standard_coding_vices.yaml  golden_standard_graph.json  golden_standard_metrics.json  golden_standard_principles.yaml  golden_standard_project_insights.yaml  golden_standard_structure_principles.yaml  golden_standard_testing_vices.yaml  golden_standard_tokenomics.yaml  pyproject.toml  (+1 more)
.agents/: AGENTS.md  ignore_patterns.yaml
.github/: PULL_REQUEST_TEMPLATE.md
Inbox/: README.md
SP_RULES/: sp-aq-001.yaml  sp-aq-002.yaml  sp-aq-003.yaml  sp-aq-004.yaml  sp-aq-005.yaml
Wiki/: Falsifiability_Report.md  Graph.md  Home.md  Principles.md  Project_Insights_Index.md  Tokenomics_Index.md  Tokenomics_Map.md  Vices_Index.md
audit/: AUDIT_TRAIL.md  README.md
badges/: ai-native.json  deep.json  detectors.json  entries.json  evidence.json  stubs.json
config/: canonical_domain_map.json  dimension_map.json  (+5 more)
(+832 files in other folders)
