[project]
name = "vibecoding-golden-standard"
version = "0.0.0"
description = "Agnostic Golden Standard: rules, vices, and governance knowledge."
# Python of record: 3.10+. The catalog generator and tests are kept within the
# pre-PEP 701 f-string subset so the declared floor can stay on the oldest
# supported runtime in the matrix. GS is a knowledge repository, not a
# distributed package; this file exists only to declare the Python-of-record
# for its scripts. Version is non-semantic (the catalogs carry their own
# format_version in golden_standard.yaml).
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["scripts", "."]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
